[gd_scene load_steps=5 format=3 uid="uid://djxypnkx464ei"]

[ext_resource type="Script" path="res://scripts/ui/tutorial_overlay.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.070588, 0.086275, 0.117647, 0.92)

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(0.917647, 0.964706, 1, 1)
corner_radius_all = 12

[sub_resource type="LabelSettings" id="3"]
font_size = 24
font_weight = 600

[node name="TutorialOverlay" type="Control"]
script = ExtResource("1")
auto_hide_seconds = 0.0
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Dimmer" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.035294, 0.047059, 0.066667, 0.78)

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.22
anchor_top = 0.16
anchor_right = 0.78
anchor_bottom = 0.82
theme_override_styles/panel = SubResource("1")

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 22

[node name="Title" type="Label" parent="Panel/VBox"]
unique_name_in_owner = true
label_settings = SubResource("3")
text = "Welcome to Claw & Snackle"
horizontal_alignment = 1

[node name="Callouts" type="RichTextLabel" parent="Panel/VBox"]
unique_name_in_owner = true
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "[b]Swipe[/b] the joystick to move the claw arm.\n[b]Hold[/b] the grab button to lower the rig, then [b]release[/b] to clamp.\n[b]Drop[/b] above the chute to serve the order before patience runs out."
fit_content = true
scroll_active = false
scroll_visible = false

[node name="ContinueButton" type="Button" parent="Panel/VBox"]
unique_name_in_owner = true
size_flags_horizontal = 4
text = "Got it â€” Let's Serve Cats!"

[node name="AutoHideTimer" type="Timer" parent="."]
one_shot = true
